#435876 - As an app developer I want to be able to add a product
Code in backend and yaml based on the necessary conditions
